# code-run-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pipelines/: golang-1.18.json  nodejs-18.json  python-3.10.json  python-3.11.json
service/: __main__.py  api.py  app.py  deps.py  messages.py  pipelines.py  services.py  settings.py  stages.py
