[tool.poetry]
name = "code-run-service"
version = "0.1.0"
description = "FastAPI microservice that allows you to run untrusted code and interact with it."
authors = ["Artem Burenin  <burenotti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
runbox = "^0.6.6"
uvicorn = { extras = ["standard"], version = "^0.19.0" }
PyYAML = "^6.0"
pydantic = { extras = ["dotenv"], version = "^1.10.2" }

[tool.poetry.dev-dependencies]
mypy = { git = "https://github.com/python/mypy", branch = "master" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
